aws_vpc.tf

resource "aws_vpc" "vpc" {
  cidr_block           = "${var.cidr_prefix}.0.0/16"
  enable_dns_hostnames = true
  enable_dns_support   = true

  tags = {
    Name = "${var.app_name}-vpc"
  }
}
